--- a/code/Basic_Data_Types.Rmd
+++ b/code/Basic_Data_Types.Rmd
@@ -305,7 +305,7 @@ print('Hello, World!'.zfill(20)) # zfill( )：在字串左側補0至指定長度
 1. 將學過的每個字串方法，至少用自己的例子執行三次，看看與自己的預期是否相同。
 
 
-## 學習要點
+## 學習要點（基本數據型別）
 
 1. 瞭解「整數、浮點、布林、字串」四種型別。
 1. 學會使用`type( )`查看物件型別。
@@ -314,12 +314,12 @@ print('Hello, World!'.zfill(20)) # zfill( )：在字串左側補0至指定長度
 1. 學會使用多種字串方法，並能自行舉例說明。
 
 
-## 應用情境
+## 應用情境（基本數據型別）
 
 要把字串"3.14"轉換成為整數3，請問要怎麼做？
 
 
-## 尋找幫助
+## 尋找幫助（基本數據型別）
 
 前面已經學過了如何利用`help( )`函式輸入關鍵字使其回報相關內容，這裡列示了一些與本章所列的關鍵字，如有興趣可視需要自己執行看看。因為執行結果很長很佔篇幅，這裡就不列出了。
 ```{python, eval = FALSE, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
