--- a/code/Hello_World.Rmd
+++ b/code/Hello_World.Rmd
@@ -53,14 +53,14 @@ print(help(help)) # 列出「help」的幫助內容。
 
 
 
-## 學習要點
+## 學習要點（哈囉，世界！）
 
 1. 學會使用`print( )`函式列出想要的文字。
 1. 學會使用`#`、`'''`、`"""`為代碼加上註解。
 1. 學會使用`help( )`查找所需的幫助內容。
 
 
-## 自我練習
+## 自我練習（哈囉，世界！）
 
 1. 自己設計一段文字，例如：「我叫『苦連天』，每天過著幸福快樂的日子」，試著讓電腦列出，並加入你自己的註解。
 1. 使用`help( )`隨意查找一些自己有興趣的關鍵字，看能找到什麼有趣的內容。
