--- a/code/Modules.Rmd
+++ b/code/Modules.Rmd
@@ -70,14 +70,14 @@ print(random.choice("木火土金水"))
 ```
 
 
-## 學習要點
+## 學習要點（模組）
 
 
 1. 明白模組的意義，並能自己製作模組。
 1. 明白如何使用模組，包括python自帶的及使用者所定義的。
 
 
-## 自我練習
+## 自我練習（模組）
 
 + 使用內建的數學（math）模組的最大公因數函式（`gcd( )`），自己設定幾組任意二個整數找出它們的最大公因素，如果不知道使用方法，可利用`help( )`查找。
 
