--- a/code/Variables.Rmd
+++ b/code/Variables.Rmd
@@ -66,14 +66,14 @@ print(id(a), id(b), id(c))
 + 首字限制只用「字母」，不用「數字」，一般主要使用小寫。
 + 區分大寫小寫，例如：「Egg、egg」被視為二個不同變項。
 
-## 學習要點
+## 學習要點（變項）
 
 1. 理解為何使用變項。
 1. 知道怎麼命名變項。
 1. 熟悉變項指派運算。
 
 
-## 自我練習
+## 自我練習（變項）
 
 1. 打開Jupyter或Spyder。
 1. 將學過的每個數據型別，用變項來表示。
